--- a/database browser/Untitled-1.css
+++ b/database browser/Untitled-1.css
@@ -8,7 +8,7 @@ body {
   .navbar {
     background-color: #333;
     padding: 10px;
-    color: white;a
+    color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
